# stdapi.ai

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  page.yml
docs/: api_openai_audio_speech.md  api_openai_audio_transcriptions.md  api_openai_audio_translations.md  api_openai_chat_completions.md  api_openai_embeddings.md  api_openai_images_generations.md  api_openai_models.md  api_overview.md  api_reference.md  index.md  operations_configuration.md  operations_getting_started.md  operations_licensing.md  operations_logging_monitoring.md  roadmap.md  use_cases.md  use_cases_agents.md  use_cases_chatbots.md  use_cases_continue.md  use_cases_langchain.md  use_cases_librechat.md  use_cases_n8n.md  use_cases_note_taking.md  use_cases_openwebui.md
docs/styles/: theme.css
docs_hooks/: __init__.py  fastapi_openapi.py
overrides/: main.html
stdapi/: __init__.py  auth.py  aws.py  aws_bedrock.py  aws_s3.py  config.py  exceptions.py  main.py  media.py  metering.py  monitoring.py  monitoring_otel.py  monitoring_otel_base.py  openai.py  openai_exceptions.py  security.py  server.py  tokenizer.py  utils.py
stdapi/models/: __init__.py  deprecation.py
stdapi/models/embedding/: __init__.py  amazon_nova_embed.py  amazon_titan_embed.py  cohere_embed.py  twelvelabs_marengo_embed.py
stdapi/models/image/: __init__.py  amazon_nova_canvas.py  amazon_titan_image_generator.py  stability.py
stdapi/routes/: __init__.py  extra_models.py  health.py  openai_audio_speech.py  openai_audio_transcriptions.py  openai_audio_translations.py  openai_chat_completions.py  openai_embeddings.py  openai_images_generations.py  openai_models.py
stdapi/types/: __init__.py  bedrock.py  openai.py  openai_audio.py  openai_chat_completions.py  openai_embeddings.py  openai_images.py  openai_models.py
tests/: conftest.py  test_openai_audio_speech.py  test_openai_audio_transcriptions.py  test_openai_audio_translations.py  test_openai_chat_completions.py  test_openai_embeddings.py  test_openai_embeddings_amazon_nova.py  test_openai_embeddings_amazon_titan.py  test_openai_embeddings_cohere.py  test_openai_embeddings_twelvelabs_marengo.py  test_openai_images_generations.py  test_openai_images_generations_amazon_nova_canvas.py  test_openai_images_generations_amazon_titan.py  test_openai_images_generations_stability.py  test_openai_models.py
tests/samples/: lorem_ipsum.txt
